# Cinux

./: .clang-format  .gitignore  404.html  CMakeLists.txt  DONE.md  PROJECT_BLUEPRINT.md  README.md  ROADMAP.md  hashmap.json  index.html  package.json  pnpm-lock.yaml  project.config.ts
ai_prompts/: README.html  code_conventions.html  prompt_generate_tutorial.html  prompt_maintain_project.html  prompt_review_tutorial.html  prompt_understand_project.html  prompt_write_module.html  writing_style.html
assets/: ai_prompts_README.md.Ba4Bzz_m.js  ai_prompts_README.md.Ba4Bzz_m.lean.js  ai_prompts_README.md.JnDw0eNq.js  ai_prompts_README.md.JnDw0eNq.lean.js  ai_prompts_code_conventions.md.DBYh5vl1.js  ai_prompts_code_conventions.md.DBYh5vl1.lean.js  ai_prompts_code_conventions.md.DOMXxSsE.js  ai_prompts_code_conventions.md.DOMXxSsE.lean.js  ai_prompts_code_conventions.md.DT_64L-6.js  ai_prompts_code_conventions.md.DT_64L-6.lean.js  ai_prompts_prompt_generate_tutorial.md.DzEbI5WE.js  ai_prompts_prompt_generate_tutorial.md.DzEbI5WE.lean.js  ai_prompts_prompt_generate_tutorial.md.zb59Jr1E.js  ai_prompts_prompt_generate_tutorial.md.zb59Jr1E.lean.js  ai_prompts_prompt_maintain_project.md.BUa4sx0N.js  ai_prompts_prompt_maintain_project.md.BUa4sx0N.lean.js  ai_prompts_prompt_maintain_project.md.CrpBMU2a.js  ai_prompts_prompt_maintain_project.md.CrpBMU2a.lean.js  ai_prompts_prompt_review_tutorial.md.BiYV8Zhx.js  ai_prompts_prompt_review_tutorial.md.BiYV8Zhx.lean.js  ai_prompts_prompt_review_tutorial.md.dl1ypRy5.js  ai_prompts_prompt_review_tutorial.md.dl1ypRy5.lean.js  ai_prompts_prompt_understand_project.md.CJTavh4a.js  ai_prompts_prompt_understand_project.md.CJTavh4a.lean.js  ai_prompts_prompt_understand_project.md.DkTS-0tP.js  ai_prompts_prompt_understand_project.md.DkTS-0tP.lean.js  ai_prompts_prompt_write_module.md.Alu3mm5g.js  ai_prompts_prompt_write_module.md.Alu3mm5g.lean.js  ai_prompts_prompt_write_module.md.D0wPh3PF.js  ai_prompts_prompt_write_module.md.D0wPh3PF.lean.js  ai_prompts_prompt_write_module.md.DF0FK4zC.js  ai_prompts_prompt_write_module.md.DF0FK4zC.lean.js  ai_prompts_templates_code_generator.md.BcAo1djX.js  ai_prompts_templates_code_generator.md.BcAo1djX.lean.js  ai_prompts_templates_code_generator.md.DUvj6KTo.js  (+1939 more)
boot/: CMakeLists.txt  boot_info.h  mbr_stub.S  stage2.S
boot/common/: long_mode.S  serial.S
kernel/: CMakeLists.txt  linker.ld  main.cpp
kernel/arch/x86_64/: boot.S  context_switch.S  crt_stub.cpp  exception_handlers.cpp  gdt.cpp  gdt.hpp  idt.cpp  interrupts.S  io.hpp  irq_handlers.cpp  memory_layout.hpp  paging.cpp  paging.hpp  paging_config.hpp  syscall.S  syscall.cpp  syscall.hpp  usermode.S  usermode.cpp  usermode.hpp
kernel/drivers/: canvas.cpp  canvas.hpp  mouse.cpp  mouse.hpp  serial.cpp  serial.hpp
kernel/drivers/ahci/: ahci.cpp  ahci.hpp  ahci_config.hpp
kernel/drivers/keyboard/: keyboard.cpp
kernel/drivers/pci/: pci.cpp  pci.hpp  pci_config.hpp
kernel/drivers/pit/: pit.cpp  pit.hpp
kernel/drivers/video/: font.cpp  font.hpp  framebuffer.hpp
kernel/fs/: ext2.cpp  ext2.hpp  file.cpp  file.hpp  inode.hpp  path.cpp  path.hpp  ramdisk.cpp  ramdisk.hpp  ramdisk_config.hpp  vfs_mount.cpp  vfs_mount.hpp
kernel/gui/: CMakeLists.txt  event.cpp  event.hpp  gui_init.cpp  gui_init.hpp  terminal.cpp  terminal.hpp  window.cpp  window.hpp  window_manager.cpp  window_manager.hpp
kernel/ipc/: pipe.cpp  pipe.hpp  pipe_ops.cpp  pipe_ops.hpp
kernel/lib/: kprintf.cpp  kprintf.hpp  string.cpp  string.hpp
kernel/lib/private/: vkprintf_impl.hpp
kernel/mini/: CMakeLists.txt  big_kernel_loader.cpp  big_kernel_loader.hpp  elf_loader.cpp  linker.ld  main.cpp
kernel/mini/arch/x86_64/: boot.S  crt_stub.cpp  paging.hpp
kernel/mini/driver/: ata.cpp  ata.hpp  pci.hpp  serial.cpp
kernel/mini/lib/: crc32.h  kprintf.cpp
kernel/mini/lib/private/: vkprintf_impl.h
kernel/mini/mm/: memory_literals.h  mm_defines.h  pmm.cpp  pmm.h
kernel/mini/test/: CMakeLists.txt  kernel_test.h  main_test.cpp  test_ata.cpp  test_big_kernel_load.cpp  test_cpp_basic.cpp  test_pmm.cpp  test_stress_big_kernel.cpp
kernel/mm/: address_space.cpp  heap.cpp  heap.hpp  pmm.cpp  pmm.hpp  vmm.cpp  vmm.hpp
kernel/proc/: init.cpp  process.cpp  process.hpp  scheduler.cpp  scheduler.hpp  sync.cpp  sync.hpp
kernel/stress/: stress_test.cpp
kernel/syscall/: path_util.cpp  path_util.hpp  sys_chdir.cpp  sys_chdir.hpp  sys_close.cpp  sys_close.hpp  sys_creat.cpp  sys_exit.cpp  sys_exit.hpp  sys_getcwd.cpp  sys_getcwd.hpp  sys_getdents.cpp  sys_getdents.hpp  sys_mkdir.cpp  sys_open.cpp  sys_open.hpp  sys_pipe.cpp  sys_pipe.hpp  sys_read.cpp  sys_rmdir.cpp  sys_stat.cpp  sys_stat.hpp  sys_unlink.cpp  sys_write.cpp  sys_write.hpp  sys_yield.cpp  sys_yield.hpp  syscall_nums.hpp
kernel/test/: main_test.cpp  test_address_space.cpp  test_ahci.cpp  test_bitmap_icon.cpp  test_canvas.cpp  test_cwd_stat.cpp  test_gui_integration.cpp  test_heap.cpp  test_keyboard.cpp  test_mouse_event.cpp  test_pipe.cpp  test_pmm.cpp  test_ramdisk.cpp  test_scheduler.cpp  test_shell.cpp  test_sync.cpp  test_sync_concurrent.cpp  test_sys_pipe.cpp  test_syscall.cpp  test_terminal.cpp  test_terminal_shell.cpp  test_usermode.cpp  test_vfs_syscall.cpp  test_vmm.cpp  test_window.cpp  test_window_manager.cpp
test/: CMakeLists.txt
test/framework/: test_framework.h
test/unit/: test_ahci.cpp  test_ata.cpp  test_big_kernel_loader.cpp  test_canvas.cpp  test_cwd_stat.cpp  test_elf_loader.cpp  test_event_queue.cpp  test_ext2_inode_ops.cpp  test_fd_table.cpp  test_heap.cpp  test_keyboard.cpp  test_mouse.cpp  test_pipe.cpp  test_pmm.cpp  test_ramdisk.cpp  test_scheduler.cpp  test_shell_redirect.cpp  test_smoke.cpp  test_sync.cpp  test_sync_concurrent.cpp  test_sys_pipe.cpp  test_syscall.cpp  test_terminal.cpp  test_usermode.cpp  test_vfs_mount.cpp  test_vmm.cpp  test_window.cpp  test_window_manager.cpp
user/: CMakeLists.txt
user/libc/: syscall.cpp  syscall.h
user/programs/: hello.cpp
user/programs/shell/: cmd_cat.cpp  cmd_cd.cpp  cmd_help.cpp  cmd_ls.cpp  cmd_pwd.cpp  cmd_stat.cpp  main.cpp  shell.hpp
(+974 files in other folders)
